--- a/public/welcome.html
+++ b/public/welcome.html
@@ -10,6 +10,11 @@
 <body>
     <div class="container">
         <h1>Expense Tracker</h1>
+
+        <!-- Logout Button -->
+        <div style="margin-bottom: 20px;">
+            <button id="logoutBtn" class="logout-btn">Logout</button>
+        </div>
         
         <!-- Expense Input Form -->
         <form id="expense-input">
@@ -38,10 +43,10 @@
         <div id="totalExpenditure">Total Expenditure: 0.00</div>
 
         <!-- Canvas for Pie Chart -->
-        <canvas id="myPieChart" width="400" height="400" style="display: none;"></canvas> <!-- Initially hidden -->
+        <canvas id="myPieChart" width="400" height="400" style="display: none;"></canvas>
 
         <!-- Canvas for Bar Chart -->
-        <canvas id="myBarChart" width="400" height="400" style="display: none;"></canvas> <!-- Initially hidden -->
+        <canvas id="myBarChart" width="400" height="400" style="display: none;"></canvas>
 
         <!-- Additional Buttons -->
         <div class="button-container">
