--- a/public/welcome.html
+++ b/public/welcome.html
@@ -9,12 +9,10 @@
 </head>
 <body>
     <div class="container">
+    <!-- Logout Button in top-right corner -->
+    <button id="logoutBtn" class="logout-btn">Logout</button>
         <h1>Expense Tracker</h1>
 
-        <!-- Logout Button -->
-        <div style="margin-bottom: 20px;">
-            <button id="logoutBtn" class="logout-btn">Logout</button>
-        </div>
         
         <!-- Expense Input Form -->
         <form id="expense-input">
@@ -64,3 +62,4 @@
     <script src="welcome.js"></script>
 </body>
 </html>
+
