--- a/public/register.html
+++ b/public/register.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Money Maze Navigator - Register</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Register - Money Maze Navigator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main-content">
-        <h1>Money Maze Navigator</h1>
-        <div class="container">
-            <h2>Register</h2>
-            <form id="registerForm">
-                <label for="firstName">First Name:</label>
-                <input type="text" id="firstName" name="firstName" required>
-                <label for="lastName">Last Name:</label>
-                <input type="text" id="lastName" name="lastName" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="pincode">Pincode:</label>
-                <input type="text" id="pincode" name="pincode" required>
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-                <div id="passwordStrength"></div> <!-- Password strength indicator -->
-                <label for="confirmPassword">Confirm Password:</label>
-                <input type="password" id="confirmPassword" name="confirmPassword" required>
-                <button type="submit">Register</button>
-            </form>
-            <p id="registrationStatus"></p> <!-- Registration status message -->
-            <p>Already have an account? <a href="login.html">Login here</a></p>
-        </div>
-    </div>
-    <script src="register.js"></script>
+  <h2>Register</h2>
+  <form id="registerForm">
+      <label for="firstName">First Name:</label>
+      <input type="text" id="firstName" name="firstName" required><br>
+
+      <label for="lastName">Last Name:</label>
+      <input type="text" id="lastName" name="lastName" required><br>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+      <p id="emailStatus" style="font-size: 14px; margin: 5px 0;"></p>
+
+      <label for="pincode">Pincode:</label>
+      <input type="text" id="pincode" name="pincode" required><br>
+
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required>
+      <p id="usernameStatus" style="font-size: 14px; margin: 5px 0;"></p>
+
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+      <p id="passwordStrength" style="font-size: 14px; margin: 5px 0;"></p>
+
+      <label for="confirmPassword">Confirm Password:</label>
+      <input type="password" id="confirmPassword" name="confirmPassword" required><br>
+
+      <button type="submit">Register</button>
+      <p id="registrationStatus" style="font-size: 14px; margin: 5px 0;"></p>
+  </form>
+
+  <script src="register.js"></script>
 </body>
 </html>
