--- a/public/register.html
+++ b/public/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Register - Money Maze Navigator</title>
-  <link rel="stylesheet" href="style2.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h2>Register</h2>
@@ -39,4 +39,5 @@
   <script src="register.js"></script>
 </body>
 </html>
+
 
