--- a/public/register.html
+++ b/public/register.html
@@ -1,44 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Register - Money Maze Navigator</title>
-  <link rel="stylesheet" href="style2.css">
+  <link rel="stylesheet" href="style2.css" />
 </head>
 <body>
-  <h2>Register</h2>
-  <form id="registerForm">
+  <!-- Top bar with app title and a Login heading/link -->
+  <header class="topbar" style="display:flex;justify-content:space-between;align-items:center;gap:1rem;padding:12px 16px;">
+    <h1 style="margin:0;">Money Maze Navigator</h1>
+    <h2 style="margin:0;font-size:1.1rem;">
+      <a href="login.html" id="loginHeading">Login</a>
+    </h2>
+  </header>
+
+  <main style="padding:16px;">
+    <h2>Register</h2>
+    <h3 style="margin-top:-6px;font-weight:500;">
+      Already have an account? <a href="login.html">Login here</a>
+    </h3>
+
+    <form id="registerForm">
       <label for="firstName">First Name:</label>
-      <input type="text" id="firstName" name="firstName" required><br>
+      <input type="text" id="firstName" name="firstName" required /><br />
 
       <label for="lastName">Last Name:</label>
-      <input type="text" id="lastName" name="lastName" required><br>
+      <input type="text" id="lastName" name="lastName" required /><br />
 
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" required />
       <p id="emailStatus" style="font-size: 14px; margin: 5px 0;"></p>
 
       <label for="pincode">Pincode:</label>
-      <input type="text" id="pincode" name="pincode" required><br>
+      <input type="text" id="pincode" name="pincode" required /><br />
 
       <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
+      <input type="text" id="username" name="username" required />
       <p id="usernameStatus" style="font-size: 14px; margin: 5px 0;"></p>
 
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" name="password" required />
       <p id="passwordStrength" style="font-size: 14px; margin: 5px 0;"></p>
 
       <label for="confirmPassword">Confirm Password:</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" required><br>
+      <input type="password" id="confirmPassword" name="confirmPassword" required /><br />
 
       <button type="submit">Register</button>
       <p id="registrationStatus" style="font-size: 14px; margin: 5px 0;"></p>
-  </form>
+    </form>
+  </main>
 
   <script src="register.js"></script>
 </body>
 </html>
-
-
-
