--- a/public/register.html
+++ b/public/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Register - Money Maze Navigator</title>
-  <link rel="stylesheet" href="style2.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <!-- Top bar with app title and a Login heading/link -->
@@ -53,3 +53,4 @@
   <script src="register.js"></script>
 </body>
 </html>
+
