--- a/public/register.html
+++ b/public/register.html
@@ -86,7 +86,8 @@
 <body>
   <div class="register-container">
     <h2>Register</h2>
-    <p class="login-link">Already have an account? <a href="/login">Login here</a></p>
+    <a href="login.html">Login here</a>
+
 
     <form id="registerForm">
       <div class="mb-3">
@@ -135,3 +136,4 @@
   <script src="register.js"></script>
 </body>
 </html>
+
