--- a/public/register.html
+++ b/public/register.html
@@ -23,6 +23,12 @@
       border-radius: 12px;
       box-shadow: 0px 6px 18px rgba(0,0,0,0.2);
     }
+     h1 {
+      text-align: center;
+      margin-bottom: 30px;
+      font-weight: bold;
+      color: #28a741;
+    }
     h2 {
       text-align: center;
       margin-bottom: 20px;
@@ -84,6 +90,7 @@
   </style>
 </head>
 <body>
+   <h1>Money Maze Navigator</h1>
   <div class="register-container">
     <h2>Register</h2>
     <a href="login.html">Login here</a>
@@ -136,4 +143,5 @@
   <script src="register.js"></script>
 </body>
 </html>
+
 
