--- a/public/login.html
+++ b/public/login.html
@@ -4,120 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Money Maze Navigator - Login</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <style>
-    body {
-      background: linear-gradient(135deg, #28a745, #20c997);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding-top: 40px;
-    }
-
-    /* Main Title */
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-weight: bold;
-      color: #fff;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-    }
-
-    /* Login Card */
-    .login-container {
-      width: 100%;
-      max-width: 420px;
-      background: #fff;
-      padding: 35px;
-      border-radius: 12px;
-      box-shadow: 0px 6px 18px rgba(0,0,0,0.2);
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-weight: bold;
-      color: #28a745;
-    }
-
-    .form-label {
-      font-weight: 500;
-      color: #444;
-    }
-
-    .form-control {
-      border-radius: 8px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      transition: all 0.3s;
-    }
-    .form-control:focus {
-      border-color: #28a745;
-      box-shadow: 0 0 6px rgba(40,167,69,0.4);
-    }
-
-    .btn-custom {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      border-radius: 8px;
-      background-color: #28a745;
-      border: none;
-      color: #fff;
-      font-weight: 600;
-      transition: background 0.3s, transform 0.2s;
-    }
-    .btn-custom:hover {
-      background-color: #218838;
-      transform: scale(1.02);
-    }
-
-    .register-link {
-      text-align: center;
-      margin-top: 15px;
-      font-size: 14px;
-    }
-    .register-link a {
-      color: #28a745;
-      font-weight: 600;
-      text-decoration: none;
-    }
-    .register-link a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <!-- Main Title -->
   <h1>Money Maze Navigator</h1>
-
-  <!-- Login Box -->
-  <div class="login-container">
+  <div class="form-container">
     <h2>Login</h2>
     <form id="loginForm">
-      <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" id="username" name="username" class="form-control" required>
-      </div>
+      <label for="username" class="form-label">Username</label>
+      <input type="text" id="username" name="username" class="form-control" required>
 
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" id="password" name="password" class="form-control" required>
-      </div>
+      <label for="password" class="form-label">Password</label>
+      <input type="password" id="password" name="password" class="form-control" required>
 
-      <button type="submit" class="btn btn-custom">Login</button>
+      <button type="submit" class="btn-custom">Login</button>
     </form>
-
-    <div class="register-link">
-      Don't have an account? <a href="register.html">Register here</a>
+    <div class="auth-link">
+      Don’t have an account? <a href="register.html">Register here</a>
     </div>
   </div>
-
   <script src="login.js"></script>
 </body>
 </html>
