--- a/public/register.html
+++ b/public/register.html
@@ -3,161 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register - Money Maze Navigator</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <style>
-    body {
-      background: linear-gradient(135deg, #28a745, #20c997);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding-top: 40px;
-    }
-
-    /* Main Title */
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-weight: bold;
-      color: #fff; /* white for contrast */
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-    }
-
-    /* Register Card */
-    .register-container {
-      width: 100%;
-      max-width: 480px;
-      background: #fff;
-      padding: 35px;
-      border-radius: 12px;
-      box-shadow: 0px 6px 18px rgba(0,0,0,0.2);
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-weight: bold;
-      color: #28a745;
-    }
-
-    .form-label {
-      font-weight: 500;
-      color: #444;
-    }
-
-    .form-control {
-      border-radius: 8px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      transition: all 0.3s;
-    }
-    .form-control:focus {
-      border-color: #28a745;
-      box-shadow: 0 0 6px rgba(40,167,69,0.4);
-    }
-
-    .btn-custom {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      border-radius: 8px;
-      background-color: #28a745;
-      border: none;
-      color: #fff;
-      font-weight: 600;
-      transition: background 0.3s, transform 0.2s;
-    }
-    .btn-custom:hover {
-      background-color: #218838;
-      transform: scale(1.02);
-    }
-
-    p.status-text {
-      font-size: 14px;
-      margin: 5px 0;
-    }
-    .status-text.error {
-      color: #dc3545;
-    }
-    .status-text.success {
-      color: #28a745;
-    }
-
-    .login-link {
-      text-align: center;
-      margin-bottom: 15px;
-      font-size: 14px;
-    }
-    .login-link a {
-      color: #28a745;
-      font-weight: 600;
-      text-decoration: none;
-    }
-    .login-link a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>Money Maze Navigator - Register</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
-  <!-- Main Title -->
   <h1>Money Maze Navigator</h1>
-
-  <!-- Register Box -->
-  <div class="register-container">
+  <div class="form-container">
     <h2>Register</h2>
-    <div class="login-link">
-      <a href="login.html">Already have an account? Login here</a>
-    </div>
-
     <form id="registerForm">
-      <div class="mb-3">
-        <label for="firstName" class="form-label">First Name</label>
-        <input type="text" id="firstName" name="firstName" class="form-control" required>
-      </div>
+      <label for="firstName" class="form-label">First Name</label>
+      <input type="text" id="firstName" name="firstName" class="form-control" required>
 
-      <div class="mb-3">
-        <label for="lastName" class="form-label">Last Name</label>
-        <input type="text" id="lastName" name="lastName" class="form-control" required>
-      </div>
+      <label for="lastName" class="form-label">Last Name</label>
+      <input type="text" id="lastName" name="lastName" class="form-control" required>
 
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" id="email" name="email" class="form-control" required>
-        <p id="emailStatus" class="status-text"></p>
-      </div>
+      <label for="email" class="form-label">Email</label>
+      <input type="email" id="email" name="email" class="form-control" required>
 
-      <div class="mb-3">
-        <label for="pincode" class="form-label">Pincode</label>
-        <input type="text" id="pincode" name="pincode" class="form-control" required>
-      </div>
+      <label for="pincode" class="form-label">Pincode</label>
+      <input type="text" id="pincode" name="pincode" class="form-control" required>
 
-      <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" id="username" name="username" class="form-control" required>
-        <p id="usernameStatus" class="status-text"></p>
-      </div>
+      <label for="username" class="form-label">Username</label>
+      <input type="text" id="username" name="username" class="form-control" required>
 
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" id="password" name="password" class="form-control" required>
-        <p id="passwordStrength" class="status-text"></p>
-      </div>
+      <label for="password" class="form-label">Password</label>
+      <input type="password" id="password" name="password" class="form-control" required>
 
-      <div class="mb-3">
-        <label for="confirmPassword" class="form-label">Confirm Password</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required>
-      </div>
+      <label for="confirmPassword" class="form-label">Confirm Password</label>
+      <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required>
 
-      <button type="submit" class="btn btn-custom">Register</button>
-      <p id="registrationStatus" class="status-text"></p>
+      <button type="submit" class="btn-custom">Register</button>
     </form>
+    <div class="auth-link">
+      Already have an account? <a href="login.html">Login here</a>
+    </div>
   </div>
-
   <script src="register.js"></script>
 </body>
 </html>
