--- a/public/login.html
+++ b/public/login.html
@@ -18,7 +18,6 @@
       padding-top: 40px;
     }
 
-    /* Main Title */
     h1 {
       text-align: center;
       margin-bottom: 20px;
@@ -27,7 +26,6 @@
       text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
     }
 
-    /* Login Card */
     .login-container {
       width: 100%;
       max-width: 420px;
@@ -89,14 +87,18 @@
     .register-link a:hover {
       text-decoration: underline;
     }
+
+    /* Error/success message */
+    #loginStatus {
+      margin-top: 15px;
+      text-align: center;
+      font-weight: 500;
+    }
   </style>
 </head>
 <body>
-
-  <!-- Main Title -->
   <h1>Money Maze Navigator</h1>
 
-  <!-- Login Box -->
   <div class="login-container">
     <h2>Login</h2>
     <form id="loginForm">
@@ -112,6 +114,9 @@
 
       <button type="submit" class="btn btn-custom">Login</button>
     </form>
+
+    <!-- ✅ Added status message container -->
+    <div id="loginStatus"></div>
 
     <div class="register-link">
       Don't have an account? <a href="register.html">Register here</a>
