--- a/public/register.html
+++ b/public/register.html
@@ -110,9 +110,11 @@
   <!-- Register Box -->
   <div class="register-container">
     <h2>Register</h2>
-    <div class="login-link">
-      <a href="login.html">Already have an account? Login here</a>
-    </div>
+   <!-- Only change: keep links consistent -->
+<div class="login-link">
+  <a href="login.html">Already have an account? Login here</a>
+</div>
+
 
     <form id="registerForm">
       <div class="mb-3">
@@ -161,3 +163,4 @@
   <script src="register.js"></script>
 </body>
 </html>
+
