--- a/public/register.html
+++ b/public/register.html
@@ -119,12 +119,12 @@
     <form id="registerForm">
       <div class="mb-3">
         <label for="firstName" class="form-label">First Name</label>
-        <input type="text" id="firstName" name="firstName" class="form-control" required>
+        <input type="text" id="first_name" name="firstName" class="form-control" required>
       </div>
 
       <div class="mb-3">
         <label for="lastName" class="form-label">Last Name</label>
-        <input type="text" id="lastName" name="lastName" class="form-control" required>
+        <input type="text" id="last_name" name="lastName" class="form-control" required>
       </div>
 
       <div class="mb-3">
@@ -163,4 +163,5 @@
   <script src="register.js"></script>
 </body>
 </html>
+
 
