--- a/public/register.html
+++ b/public/register.html
@@ -118,14 +118,13 @@
 
     <form id="registerForm">
       <div class="mb-3">
-        <label for="firstName" class="form-label">First Name</label>
-        <input type="text" id="first_name" name="firstName" class="form-control" required>
-      </div>
+     <!-- First Name -->
+      <label for="first_name">First Name</label>
+      <input type="text" id="first_name" name="first_name" required>
 
-      <div class="mb-3">
-        <label for="lastName" class="form-label">Last Name</label>
-        <input type="text" id="last_name" name="lastName" class="form-control" required>
-      </div>
+      <!-- Last Name -->
+      <label for="last_name">Last Name</label>
+      <input type="text" id="last_name" name="last_name" required>
 
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
@@ -163,5 +162,6 @@
   <script src="register.js"></script>
 </body>
 </html>
+
 
 
