--- a/public/register.html
+++ b/public/register.html
@@ -121,11 +121,11 @@
      <!-- First Name -->
       <label for="first_name">First Name</label>
       <input type="text" id="first_name" name="first_name" required>
-
+<div>
       <!-- Last Name -->
       <label for="last_name">Last Name</label>
       <input type="text" id="last_name" name="last_name" required>
-
+  </div>
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
         <input type="email" id="email" name="email" class="form-control" required>
@@ -162,6 +162,7 @@
   <script src="register.js"></script>
 </body>
 </html>
+
 
 
 
