--- a/public/register.html
+++ b/public/register.html
@@ -120,11 +120,12 @@
       <div class="mb-3">
      <!-- First Name -->
       <label for="first_name">First Name</label>
-      <input type="text" id="first_name" name="first_name" required>
+      <input type="text" id="first_name" name="first_name" class="form-control" required>>
 <div>
       <!-- Last Name -->
+  <div class="mb-3">
       <label for="last_name">Last Name</label>
-      <input type="text" id="last_name" name="last_name" required>
+      <input type="text" id="last_name" name="last_name" class="form-control" required>>
   </div>
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
@@ -162,6 +163,7 @@
   <script src="register.js"></script>
 </body>
 </html>
+
 
 
 
